--- a/main.html
+++ b/main.html
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Form Submission</title>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <form id="userForm">
+        <label>First Name:
+            <input type="text" name="firstName" id="firstName" required>
+        </label><br>
 
+        <label>Last Name:
+            <input type="text" name="lastName" id="lastName" required>
+        </label><br>
+
+        <label>Phone Number:
+            <input type="tel" name="phoneNumber" id="phoneNumber" required>
+        </label><br>
+
+        <label>Email ID:
+            <input type="email" name="email" id="email" required>
+        </label><br>
+
+        <input type="submit" value="Submit">
+    </form>
+
+    <script src="./script.js"></script>
 </body>
 
 </html>
